--- a/gestion-tareas-front/src/pages/Login/Login.css
+++ b/gestion-tareas-front/src/pages/Login/Login.css
@@ -121,3 +121,10 @@ body {
 .register-link a:hover {
   text-decoration: underline;
 }
+
+.error-message {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 0.5rem;
+  text-align: center;
+}
